k8s/unifi/unifi-deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: unifi
  namespace: unifi
spec:
  replicas: 1
  selector:
    matchLabels:
      app: unifi
  template:
    metadata:
      name: unifi
      namespace: unifi
      labels:
        app: unifi
    spec:
      volumes:
        - name: unifi
          persistentVolumeClaim:
            claimName: unifi
      containers:
        - name: unifi-controller
          image: 'jacobalberty/unifi:8.4'
          ports:
            - containerPort: 3478
              protocol: UDP
            - containerPort: 8080
              protocol: TCP
            - containerPort: 8443
              protocol: TCP
            - containerPort: 8843
              protocol: TCP
            - containerPort: 8880
              protocol: TCP
            - containerPort: 6789
              protocol: TCP
          volumeMounts:
            - name: unifi
              mountPath: /unifi
