k8s/unifi/unifi-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: unifi
  namespace: unifi
  labels:
    app: unifi
spec:
  ports:
    - name: '3478'
      protocol: UDP
      port: 3478
      targetPort: 3478
    - name: '8080'
      protocol: TCP
      port: 8080
      targetPort: 8080
    - name: '8443'
      protocol: TCP
      port: 8443
      targetPort: 8443
    - name: '8843'
      protocol: TCP
      port: 8843
      targetPort: 8843
    - name: '8880'
      protocol: TCP
      port: 8880
      targetPort: 8880
    - name: '6789'
      protocol: TCP
      port: 6789
      targetPort: 6789
  selector:
    app: unifi
---
kind: Service
apiVersion: v1
metadata:
  name: lb-unifi
  namespace: unifi
  annotations:
    metallb.universe.tf/allow-shared-ip: 'true'
spec:
  ports:
    - name: '8080'
      protocol: TCP
      port: 8080
      targetPort: 8080
    - name: '8443'
      protocol: TCP
      port: 8443
      targetPort: 8443
    - name: '8880'
      protocol: TCP
      port: 8880
      targetPort: 8880
    - name: '8843'
      protocol: TCP
      port: 8843
      targetPort: 8843
    - name: '6789'
      protocol: TCP
      port: 6789
      targetPort: 6789
  selector:
    app: unifi
  type: LoadBalancer
  loadBalancerIP: 10.1.240.231
---
kind: Service
apiVersion: v1
metadata:
  name: lb-unifi-udp
  namespace: unifi
  annotations:
    metallb.universe.tf/allow-shared-ip: 'true'
spec:
  ports:
    - name: '10001'
      protocol: UDP
      port: 10001
      targetPort: 10001
    - name: '1900'
      protocol: UDP
      port: 1900
      targetPort: 1900
    - name: '5514'
      protocol: UDP
      port: 5514
      targetPort: 5514
    - name: '3478'
      protocol: UDP
      port: 3478
      targetPort: 3478
  selector:
    app: unifi
  type: LoadBalancer
  loadBalancerIP: 10.1.240.231
