k8s/unifi/unifi-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: unifi
  namespace: unifi
annotations:
  #nginx.ingress.kubernetes.io/backend-protocol: HTTPS
  cert-manager.io/cluster-issuer: "letsencrypt"
spec:
  ingressClassName: nginx
  rules:
  - host: unifi.morrislan.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: unifi
            port:
              number: 8443
  tls:
  - hosts:
    - unifi.morrislan.net
    secretName: unifi-tls
